--- a/media.html
+++ b/media.html
@@ -13,7 +13,9 @@
 <body>
 
     <header>
-        <a href="index.html" class="home-link">ROCKY Archive</a>
+        <a href="index.html" class="logo-link">
+            <img src="assets/headerlogo.png" alt="Home" class="logo">
+        </a>
     </header>
 
     <nav>
