--- a/index.html
+++ b/index.html
@@ -28,13 +28,29 @@
         <a href="merch.html">Merch Archive</a>
     </nav>
 
-    <div class="container">
+    <div>
         <h2>Welcome to ROCKY's Archive</h2>
         <p>This website serves as an archive for all things ROCKY. Click the links above to navigate.</p>
     </div>
 
     <footer>
-        &copy; 2025 ROCKY Archive. All Rights Reserved.
+        <h2>&copy; 2025 ROCKY Archive. All Rights Reserved.</h2>
+        <h3>Find ROCKY on: </h3>
+        <a href="https://www.instagram.com/p_rocky" target="_blank">
+            <button>Instagram</button>
+        </a>
+        <a href="https://x.com/p_rockyent" target="_blank">
+            <button>Twitter</button>
+        </a>
+        <a href="https://www.youtube.com/@ROCKY_Onefineday_Ent." target="_blank">
+            <button>Youtube</button>
+        </a>
+        <a href="https://open.spotify.com/artist/3bQABAi10Xqg1WsMAhYdBZ" target="_blank">
+            <button>Spotify</button>
+        </a>
+        <a href="https://soundcloud.com/rockycl0ud" target="_blank">
+            <button>Soundcloud</button>
+        </a>
     </footer>
 
 </body>
