--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     </div>
 
     <footer>
-        <h2>&copy; 2025 ROCKY Archive. All Rights Reserved.</h2>
-        <h3>Find ROCKY on: </h3>
+        
+        <h7>Find ROCKY on: </h7>
         <a href="https://www.instagram.com/p_rocky" target="_blank">
             <button>Instagram</button>
         </a>
@@ -51,6 +51,8 @@
         <a href="https://soundcloud.com/rockycl0ud" target="_blank">
             <button>Soundcloud</button>
         </a>
+
+        <p>&copy; 2025 ROCKY Archive. All Rights Reserved.</p>
     </footer>
 
 </body>
