--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <footer>
         
-        <h7>Find ROCKY on: </h7>
+        <h7>Find ROCKY on:<br></h7>
         <a href="https://www.instagram.com/p_rocky" target="_blank">
             <button>Instagram</button>
         </a>
