--- a/about.html
+++ b/about.html
@@ -15,6 +15,11 @@
     <div id="header-placeholder"></div> <!-- Header will load here -->
     <div id="navbar-placeholder"></div> <!-- Navbar will load here -->
 
+    <div>
+        <h2>About ROCKY</h2>
+        <p>COMING SOON</p>
+    </div>
+
     <div id="footer-placeholder"></div> <!-- Footer will load here -->
 
     <script>
