--- a/works.html
+++ b/works.html
@@ -15,6 +15,11 @@
     <div id="header-placeholder"></div> <!-- Header will load here -->
     <div id="navbar-placeholder"></div> <!-- Navbar will load here -->
 
+    <div>
+        <h2>ROCKY's Works Archive</h2>
+        <p>PAST MUSIC, FILMS... COMING SOON</p>
+    </div>
+
     <div id="footer-placeholder"></div> <!-- Footer will load here -->
 
     <script>
